kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goadmin
  namespace: goadmin
spec:
  selector:
    app: goadmin
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
