kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goadmin
  namespace: goadmin
spec:
  ingressClassName: nginx
  rules:
  - host: goadmin.kuzane.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goadmin
            port:
              name: http
